# ml-platform

./: .env.example  .gitignore  Makefile  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml  terraform-plan.yml
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 202607180001_initial_control_plane.py  202607180002_dataset_registry.py  202607180003_feature_store.py  202607180004_experiments_training.py  202607180005_model_registry.py  202607190006_deployments.py  202607190007_inference.py  202607190008_alerting.py  202607190009_drift_detection.py  202607190010_retraining.py  202607190011_auth_refresh_sessions.py
contracts/events/: project-created.v1.json
contracts/openapi/: README.md
docs/: README.md
docs/runbooks/: backup-restore.md  incident-response.md  production-readiness.md
docs/security/: threat-model.md
examples/: README.md  catalog.json
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/src/: main.tsx  styles.css
infra/compose/: docker-compose.yml
infra/docker/: airflow.Dockerfile  backend.Dockerfile  frontend.Dockerfile  inference.Dockerfile  training.Dockerfile
load/: README.md
load/k6/: api_smoke.js
ml/examples/: __init__.py  common.py
scripts/ci/: production_readiness.py
scripts/dev/: seed_backend.py
scripts/examples/: bootstrap_examples.py  run_local_training.py
scripts/ops/: backup_postgres.sh  restore_postgres.sh
scripts/workers/: run_training_worker.py
(+293 files in other folders)
