[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgeml"
version = "0.1.0"
description = "A production-shaped modular monolith ML platform."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "pydantic>=2.10,<3.0",
  "pydantic-settings>=2.7,<3.0",
  "email-validator>=2.2,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.14,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "redis>=5.2,<7.0",
  "prometheus-client>=0.21,<1.0",
  "python-multipart>=0.0.20,<1.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
  "pytest-cov>=6.0,<7.0",
  "ruff>=0.9,<1.0",
  "mypy>=1.14,<2.0"
]

[tool.setuptools.packages.find]
where = ["backend/src"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend/src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["backend/src", "backend/tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S"]
ignore = ["B008", "S101"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**/*.py" = ["S106"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["forgeml"]
